@@ -1,3 +1,10 @@
+2006-10-15  Titus Brown  <t@vallista.idyll.org>
+
+	* Switched over to using pkg_resources.require for quixote version
+	  require/check.
+
+	* Fixed DNS tests with fake idyll.org hosts (Alex Martelli)
+
 2006-09-20  Titus Brown  <t@issola.caltech.edu>
 
 	* Bumped version to 0.9.
